# github-preview

./: .gitignore  README.md
docs/decisions/: 000-template.md  003-traefik.md  004-nginx-ingress.md  005-githubapp-deployer-separation.md  01-github-app.md
helm-chart/: QUICKSTART.md  values-preview.yaml
helm-chart/templates/: deployment.yaml  serviceaccount.yaml
scripts/: create-cloud-tasks-queue.sh
src/deployer/: worker.py
src/github-app-preview-url/: main.py  pyproject.toml
src/githubapp/: __init__.py  auth.py  config.py  github_client.py  main.py  pyproject.toml  queue_client.py  webhook_parser.py
src/helloworld/: Dockerfile  helloworld.py
src/setupgke/: README.md
src/statestore/: __init__.py  firestore_client.py
