[project]
name = "github-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.13.3",
    "fastapi>=0.128.1",
    "PyJWT>=2.8.0",
     "cryptography>=41.0.0",
    "python-dotenv>=1.2.1",
    "uvicorn>=0.39.0",
]
